Fixes to Flip Gallery

--- a/src/components/stages/GalleryFlipImage.css
+++ b/src/components/stages/GalleryFlipImage.css
@@ -10,7 +10,7 @@
   width: 100%;
   min-height: auto;
   padding: 20px 0; /* optional */
-  background: var(--color-just-black, #181818);
+  background: var(--color-just-black, #ffffff);
   color: var(--color-just-white, #f0f3f4);
 }
 
@@ -97,7 +97,7 @@
 }
 
 .flip-gallery-item:hover .back-side {
-  background: #000;
+  background: #1c6572;
   opacity: 1;
   transform: rotateY(0deg);
 }
@@ -132,6 +132,8 @@
   height: 100%;
   color: inherit;
   text-decoration: none;
+  pointer-events: none;    /* remove this line to enable link on click */
+
 }
 
 .content {
@@ -161,7 +163,7 @@
 
 .content h3 {
   position: relative;
-  color: #3498db;
+  color: #ffffff;
   font-size: 30px;
   line-height: 1.25;
   margin-bottom: 25px;
@@ -175,7 +177,7 @@
   bottom: -10px;
   left: 50%;
   margin-left: -25px;
-  background: #85c1e9;
+  background: #f0f3f4;
 }
 
 .content p {
